EVG-393 fix header misalign on gridtables

--- a/public/static/less/task_history.less
+++ b/public/static/less/task_history.less
@@ -1,6 +1,6 @@
 .task-history-gridtable {
   .top-header-row.locked {
-    margin-left: 210px;
+    margin-left: 250px;
     padding-left: 23px;
     width: 590px;
   }
